JavaFX demo code cleanup